redis/manual_ingress_controller/prp-load.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis-ingress
    role: master
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis-ingress
    role: master
    tier: backend
