redis/manual_ingress_controller/prp-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  backend:
    serviceName: redis-master
    servicePort: 6379
  rules:
  - host: scidas-redis.nautilus.optiputer.net
